create, edit and delete fetch demo

--- a/demo/fetch/user-edit.html
+++ b/demo/fetch/user-edit.html
@@ -2,29 +2,31 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Users Create</title>
+    <meta
+      name="viewport"
+      content="width=
+    , initial-scale=1.0"
+    />
+    <title>User Edit</title>
   </head>
   <body>
-    <main>
-
-    </main>
+    <main></main>
     <script>
       "use strict";
 
       let user = {
-        name: "Tiffany Doory",
+        name: "Tiffany Updated Doory",
         username: "tdoorey",
-        email: "tdoorey@lipsmack.com",
+        email: "tdoorey@lipsdontlie.com",
       };
 
       let requestInit = {
-        method: "POST",
+        method: "PUT",
         headers: { "Content-Type": "application/json" },
         body: JSON.stringify(user),
       };
 
-      fetch("http://localhost:3000/users/", requestInit)
+      fetch("http://localhost:3000/users/12", requestInit)
         .then((response) => response.json())
         .then((user) => {
           console.log(user);
